--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -225,47 +225,47 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_WAR</zType>
-		<Translation>Pagan Cult of War</Translation>
+		<Translation>Heidnischer Kriegeskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_FIRE</zType>
-		<Translation>Pagan Cult of Fire</Translation>
+		<Translation>Heidnischer Feuerkult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_WISDOM</zType>
-		<Translation>Pagan Cult of Wisdom</Translation>
+		<Translation>Heidnischer Weisheitskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_SUN</zType>
-		<Translation>Pagan Cult of the Sun</Translation>
+		<Translation>Heidnischer Sonnenkult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_WATER</zType>
-		<Translation>Pagan Cult of the Seas</Translation>
+		<Translation>Heidnischer Meereskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_LOVE</zType>
-		<Translation>Pagan Cult of Love</Translation>
+		<Translation>Heidnischer Liebeskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_UNDERWORLD</zType>
-		<Translation>Pagan Cult of Death</Translation>
+		<Translation>Heidnischer Todeskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_HEALING</zType>
-		<Translation>Pagan Cult of Healing</Translation>
+		<Translation>Heidnischer Heilungskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_KINGSHIP</zType>
-		<Translation>Pagan Cult of Royalty</Translation>
+		<Translation>Heidnischer Königskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_HEARTH</zType>
-		<Translation>Pagan Cult of the Hearth</Translation>
+		<Translation>Heidnischer Herzenskult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PAGAN_CULT_HUNTING</zType>
-		<Translation>Pagan Cult of Hunting</Translation>
+		<Translation>Heidnischer Jägerkult</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_FERTILE_SOIL</zType>
