--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -596,7 +596,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_WITTY_GAIN_1</zType>
-		<Translation>{0_character} is {1_trait}, able to make anyone laugh with {masculine_0:his:her} quick tongue and inventive jokes!</Translation>
+		<Translation>{0_character} ist {1_trait}, in der Lage jeden mit {masculine_0:seiner:ihrer} schnellen Zunge einfallsreichen Scherzen zum lachen zu bringen!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SPOILED</zType>
@@ -604,7 +604,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SPOILED_GAIN_1</zType>
-		<Translation>{0_character} likely to fly into a rage if {masculine_0:he:she} does not get {masculine_0:his:her} own way, a most {1_trait} person!</Translation>
+		<Translation>{0_character} vermutlich aus der Haut fahren wenn es für {masculine_0:ihn:sie} nicht nach ihrer Pfeife geht, eine höchst {1_trait} Person!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_STUDY_PHILOSOPHY</zType>
@@ -644,7 +644,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_ILL_GAIN_1</zType>
-		<Translation>{0_character} has fallen {1_trait}.</Translation>
+		<Translation>{0_character} wurde {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_ILL_GAIN_2</zType>
@@ -680,35 +680,35 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_GAIN_1</zType>
-		<Translation>Afflicted by nigh-constant vomiting and diarrhea, {0_character} is {1_trait}.</Translation>
+		<Translation>Leidend unter ständigen nächtlichen Erbrechen und Durchfall, ist {0_character} {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_GAIN_2</zType>
-		<Translation>{0_character} is {1_trait}, suffering from a high fever and constant shaking, leaving {masculine_0:him:her} barely able to walk.</Translation>
+		<Translation>{0_character} ist {1_trait}, leidend durch hohes Fieber und regelmäßigem Schüttelfrost, ist {masculine_0:er:sie} kaum noch im Stande zu gehen.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_GAIN_3</zType>
-		<Translation>{1_trait}, coughing up bloody mucus and suffering from sharp pains in {masculine_0:his:her} chest, {0_character} fears {masculine_0:he:she} does not have much time left.</Translation>
+		<Translation>{1_trait}, Bluthusten und leidend durch stechende Schmerzen in {masculine_0:seinem:ihrem} Brustkorb, fürchtet {0_character} {masculine_0:er:sie} hat nicht mehr viel Zeit.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_GAIN_4</zType>
-		<Translation>Always having been a bit sickly, {0_character} has now become {1_trait}.</Translation>
+		<Translation>Immer schon ein bisschen kränkelnd, wurde {0_character} nun {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_GAIN_5</zType>
-		<Translation>The health of {0_character} has taken a serious turn for the worse, and {masculine_0:he:she} is now {1_trait}.</Translation>
+		<Translation>Die Gesundheit von {0_character} hat sich schlagartig zum schlechten gewendet und {masculine_0:er:sie} ist jetzt {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_LOSS_1</zType>
-		<Translation>{0_character} is no longer {1_trait}, {masculine_0:he:she} has made an amazing recovery!</Translation>
+		<Translation>{0_character} ist nicht länger {1_trait}, {masculine_0:er:sie} hat sich erstaunlich Genesen!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_LOSS_2</zType>
-		<Translation>Although {masculine_0:he:she} was at death's door, {0_character} has miraculously recovered from being {1_trait}.</Translation>
+		<Translation>Obwohl {masculine_0:er:sie} an der Schwelle des Todes stand, hat sich {0_character} wie durch ein Wunder erholt, dadruch das {masculine_0:er:sie} {1_trait} war.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_ILL_LOSS_3</zType>
-		<Translation>{0_character} is now on the road to recovery, and no longer {1_trait}.</Translation>
+		<Translation>{0_character} ist auf dem Weg der Besserung und ist nicht länger {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_INCUBATED</zType>
@@ -716,7 +716,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_INCUBATED_LOSS_1</zType>
-		<Translation>{0_character} has returned from the sacred areas and is no longer {1_trait}.</Translation>
+		<Translation>{0_character} ist von den heiligen Gebieten zurückgekehrt und ist nicht länger {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_POISONED</zType>
@@ -724,7 +724,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_POISONED_LOSS_1</zType>
-		<Translation>{0_character} has recovered and is no longer {1_trait}.</Translation>
+		<Translation>{0_character} hat sich erholt und ist nicht länger {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_MISERABLE</zType>
@@ -736,15 +736,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SCARRED_GAIN_1</zType>
-		<Translation>{0_character} has recovered from {masculine_0:his:her} recent injury, but it has left {masculine_0:him:her} {1_trait} forever.</Translation>
+		<Translation>{0_character} hat sich von {masculine_0:seiner:i} kürzlichen Verletzung erholt, es hat {masculine_0:ihn:sie} aber für immer {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SCARRED_GAIN_2</zType>
-		<Translation>After a recent wound, {0_character} is now most impressively {1_trait}!</Translation>
+		<Translation>Nach einer kürzlich erlangten Wunde ist {0_character} nun beträchtlich {1_trait}!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SCARRED_GAIN_3</zType>
-		<Translation>While {masculine_0:his:her} injury has healed, {0_character} is now hideously {1_trait}!</Translation>
+		<Translation>Während {masculine_0:seine:ihre} Verletzung verheilt ist, ist {0_character} nun furchtbar {1_trait}!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_CRIPPLED</zType>
@@ -752,7 +752,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_CRIPPLED_GAIN_1</zType>
-		<Translation>{0_character} will never be the same again. A recent injury has {1_trait} {masculine_0:him:her}!</Translation>
+		<Translation>{0_character} wird niemals mehr derselbe sein. Eine kürzliche Verletzung hat {masculine_0:ihn:sie} {1_trait} !</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_BLINDED</zType>
@@ -760,7 +760,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_BLINDED_GAIN_1</zType>
-		<Translation>{0_character} will never see again and must try to adapt to a life in darkness, {masculine_0:he:she} has been {1_trait}!</Translation>
+		<Translation>{0_character} wird niemals mehr sehen können und muss sich nun an ein Leben im Dunkeln anpassen, {masculine_0:er:sie} ist nun {1_trait}!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_IMPRISONED</zType>
@@ -876,11 +876,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_DRUNK_GAIN_1</zType>
-		<Translation>After one too many nights of revels, {0_character} is now a {1_trait}.</Translation>
+		<Translation>Nach zu vielen gefeierten Nächten, ist {0_character} jetzt ein {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_DRUNK_GAIN_2</zType>
-		<Translation>{0_character} has lately spent too many evenings with just a pitcher of wine for company and is now a {1_trait}.</Translation>
+		<Translation>{0_character} hat in letzter Zeit zu viele Abende nur in Gesellschaft mit einem Krug voller Wein verbracht und ist jetzt ein {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_INSANE</zType>
@@ -888,7 +888,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_INSANE_GAIN_1</zType>
-		<Translation>{0_character} has gone completely mad! {masculine_0:He:She} is now {1_trait}.</Translation>
+		<Translation>{0_character} ist völlig verrückt geworden! {masculine_0:Er:Sie} ist jetzt {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_MOURNING</zType>
@@ -896,7 +896,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_MOURNING_LOSS_1</zType>
-		<Translation>The grieving of {0_character} is at an end. {masculine_0:He:She} is no longer {1_trait}.</Translation>
+		<Translation>Der Trauerprozess von {0_character} scheint zu Ende zu sein. {masculine_0:Er:Sie} ist nicht länger {1_trait}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_PROPHET</zType>
@@ -908,11 +908,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_KING_OF_TYRE</zType>
-		<Translation>King of Tyre</Translation>
+		<Translation>König von Tyre</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_CHEIF_PRIEST_OF_MELQUART</zType>
-		<Translation>Chief Priest of Melquart in Tyre</Translation>
+		<Translation>Oberster Geistreicher des Melqart in Tyre</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_MYSTERIOUS_SWORD</zType>
@@ -1004,11 +1004,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_WOUNDED_GAIN_1</zType>
-		<Translation>{0_character} has been {1_trait}!</Translation>
+		<Translation>{0_character} wurde {1_trait}!</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_WOUNDED_LOSS_1</zType>
-		<Translation>{0_character} is no longer {1_trait}, {masculine_0:he:she} doesn't even have a scar!</Translation>
+		<Translation>{0_character} ist nicht länger {1_trait}, {masculine_0:er:sie} hat nicht mal einen Kratzer!</Translation>
 	</Entry>
     <Entry>
         <zType>TEXT_TRAIT_SEVERELY_WOUNDED</zType>
@@ -1016,10 +1016,10 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_WOUNDED_GAIN_1</zType>
-		<Translation>{0_character} has been {1_trait}, it remains to be seen if {masculine_0:he:she} will recover.</Translation>
+		<Translation>{0_character} wurde {1_trait}, es bleibt abzuwarten ob {masculine_0:er:sie} sich erholen wird.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SEVERELY_WOUNDED_LOSS_1</zType>
-		<Translation>{0_character} has made a miraculous recovery after being {1_trait}, the grievous injury has healed entirely!</Translation>
+		<Translation>{0_character} hat eine übernatürliche Genesung gemacht nachdem {masculine_0:er:sie} {1_trait} war, die schwerwiegende Verletzung ist komplett verheilt!</Translation>
 	</Entry>
 </Root>
